# wingardium

copilot/: copilot.py  cudo_client.py  golden_config_CMM_yaml.txt  requirements.txt
starship-ai/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CIQ_API_TESTING_GUIDE.md  CIQ_INTEGRATION_README.md  CIQ_SWAGGER_VISUALIZATION.md  README.md  RELEASE-NOTES.md  SSE-360_SUMMARY.md  demo_ciq_endpoints.py  docker-compose.yaml  project-config.yml  pyproject.toml  release-notes.json  requirements.txt  setup.cfg  setup.py  starship.yaml  test_ciq_integration.py  test_ciq_session.md  tox.ini
starship-ai/deploy/helm/starship_ai/: Chart.yaml  values.yaml
starship-ai/deploy/helm/starship_ai/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
starship-ai/deploy/helm/starship_ai/templates/tests/: test-connection.yaml
starship-ai/docker/: Dockerfile
starship-ai/src/ai/: __init__.py  app.py  config.py  exceptions.py  main.py
starship-ai/src/ai/agents/: athena_cudo_agent.py  bedrock_client.py  config.py
starship-ai/src/ai/agents/ciq_agent/: __init__.py  ai_helpers.py  ciq-app.py  ciq_core.py  config.py  cudo_client.py  golden_config_CMM_yaml.txt  session_manager.py  streamlit_ui.py  yaml_parser.py
starship-ai/src/ai/endpoints/v1/: __init__.py  endpoints.py
starship-ai/src/ai/models/v1/: __init__.py  ciqchat.py  ciqpayload.py  common.py  cudochat.py  geninfochat.py  geninfopayload.py  health.py  helpchat.py  infrahubclchat.py  infrahubclpayload.py  wlchat.py  wlpayload.py
starship-ai/src/ai/routes/: __init__.py
starship-ai/src/ai/routes/v1/: __init__.py  ciq_assistant.py  common.py  cudo_assistant.py  geninfo_assistant.py  health.py  infra_assistant.py  wlcluster_assistant.py
starship-ai/tests/unit/routes/v1/: __init__.py  test_health.py
