[metadata]
license = Proprietary
author = Nokia CNS T&I Advanced Technology Design Studio
author_email = cic@nokia.com
description = Starship Enterprise PoC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.atds.int.net.nokia.com/pathfinder/starship_ai/
download_url = tbd
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Unix Shell
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Build Tools

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    asgi_correlation_id
    asyncpg
    boto3
    fastapi[all]<1
    google-cloud-firestore
    httpx
    PyYAML
    pydantic
    sqlalchemy>=1.4
    uvicorn

[pytest]
pytest_plugins = pytest_mock

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    starship_ai = ai.main:main
